--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "description": "Functions used to manage JSON I/O",
     "require-dev": {
         "atoum/atoum" : "~2.0",
-        "fabpot/php-cs-fixer": "~1.4"
+        "friendsofphp/php-cs-fixer": "~1.11"
     },
     "autoload": {
         "psr-0": {
